test: some test coverage